Add new dependencies and add new libraries

--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   "author": "Ernest Ismanoviç",
   "license": "ISC",
   "devDependencies": {
-    "@faker-js/faker": "^7.0.1",
+    "cypress": "^9.6.1",
     "cypress-mochawesome-reporter": "^3.1.0",
-    "cypress-plugin-retries": "^1.5.2",
     "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "cypress": "^9.6.1",
     "dotenv": "^16.0.1",
     "node-slack": "0.0.7",
-    "prettier": "^2.6.2",
+    "cypress-plugin-retries": "^1.5.2",
     "rosie": "^2.1.0",
-    "typescript": "^4.6.4"
+    "faker": "^5.5.3"
   }
 }
