Login page and sign In page tests, and update some dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
         "target": "ES6",
         "allowJs": true,
         "lib": ["es6", "DOM"],
-        "types": ["cypress"]
+        "types": ["cypress"],
+        "noEmit": true
     },
-    "include": ["**/*.ts"],
-    "exclude": ["node_modules"]
+    "include": ["**/*.ts", "../node_modules/cypress"],
+    "exclude": ["../node_modules/cypress/**/*.js"],
 }
