--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
+    "@typescript-eslint/no-unsafe-argument": "error",
     "@typescript-eslint/no-namespace": "off"
 
   }
