--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "cypress": "^9.6.1",
-    "cypress-mochawesome-reporter": "^3.1.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -22,13 +21,13 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "cypress-plugin-retries": "^1.5.2",
+    "cypress-mochawesome-reporter": "^3.1.0",
     "dotenv": "^16.0.1",
+    "eslint-plugin-cypress": "^1.0.0",
     "faker": "^5.5.3",
     "node-slack": "0.0.7",
     "rosie": "^2.1.0"
