--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "allowJs": true,
         "lib": ["es6", "DOM"],
         "types": ["cypress"],
-        "noEmit": true
+        "noEmit": true,
+        "esModuleInterop": true,
+        "moduleResolution": "Node"
     },
     "include": ["**/*.ts", "../node_modules/cypress"],
     "exclude": ["../node_modules/cypress/**/*.js"],
