--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "cy:run:firefox": "cypress run --browser firefox",
     "cy:run:electron": "cypress run --browser electron",
     "lint": "eslint . --ext .ts",
-    "cy:run-dashboard": "npx cypress run --record --key b1ceb924-6995-4a3e-8709-c896a8739fb0",
-    "cy:run-video": "cypress run --record --key b1ceb924-6995-4a3e-8709-c896a8739fb0",
+    "cy:run-dashboard": "npx cypress run --record --key {keyValue}",
+    "cy:run-video": "cypress run --record --key ",{keyValue}
     "start-jenkins-server": "java -jar jenkins.war -httpPort=8081 --enable-future-java"
   },
   "author": "Ernest Ismanoviç",
